# kaggle_sennet

./: .gitignore  create_debug_dataset.sh  environment.yml  lib  readme.md  source.bash
configs/: submission.yaml  train.yaml  train_2nd.yaml  train_fg.yaml
cpp/: .gitignore  CMakeLists.txt  Dockerfile  start_build_container.bash  vcpkg.json
cpp/src/: CMakeLists.txt
cpp/src/app/: CMakeLists.txt  mmapExample.cpp  solveWatershed.cpp
explore_experiments/: viktor_f1_dice_lb_analysis.ipynb  viktor_r18_upsample_replace_bn_with_ln.ipynb  viktor_reproduce_resnext50_32x4d.ipynb  viktor_smp_unet_r18_hyptun.ipynb  viktor_smp_unet_r50_scan_crop_size_n_channels.ipynb  viktor_smp_unet_r50_scan_n_channels.ipynb  viktor_smp_unet_scan_model_size.ipynb
notebooks/: 2d_mask_proc.ipynb  3d-rotation.ipynb  4th-place-solution.ipynb  debug_pred.ipynb  direct_eval.ipynb  eda_browsing_data.ipynb  exp_add_noise.ipynb  exp_cc3d.ipynb  exp_clahe.ipynb  exp_debug.ipynb  exp_eda.ipynb  exp_fast_surface_dice.ipynb  exp_focal_debug.ipynb  exp_grid_sample.ipynb  exp_label_compare.ipynb  exp_normalisation.ipynb  exp_region_growing.ipynb  exp_surface_dice_scrap.ipynb  exp_surface_loss.ipynb  exp_surface_loss2.ipynb  exp_surface_loss_sanity_check.ipynb  exp_torch_lstsq_sanity.ipynb  flood-fill-exploration.ipynb  foreground_splitter.ipynb  igor-inference.ipynb  inference-1024-should-have-a-percentile-of-0-00149.ipynb  investigate-predictions-8-channel.ipynb  investigate-predictions-dice.ipynb  investigate-predictions.ipynb  label-gt-density.ipynb  normalization.ipynb  ply_stuffs.ipynb  public-lb.ipynb  (+11 more)
(+142 files in other folders)
